assets/css/old-index.css
@import url('https://fonts.googleapis.com/css2?family=Aldrich&family=Montserrat&family=Archivo+Black&family=Archivo+Narrow:wght@700&family=Caveat:wght@700&family=Comforter&family=Hammersmith+One&family=Homemade+Apple&family=Josefin+Sans:wght@200&family=Jost&family=Kanit:wght@700&family=Lexend+Exa:wght@900&family=Libre+Barcode+39+Text&family=Marcellus&family=Merienda:wght@700&family=Michroma&family=Monda&family=Montserrat+Subrayada:wght@700&family=Mr+Dafoe&family=Orbitron&family=Oxanium:wght@200;800&family=Quantico:wght@700&family=Rock+Salt&family=Russo+One&family=Splash&family=Teko:wght@700&family=Water+Brush&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
}

h1 {
    font-family: 'teko', impact, sans-serif;
}

h2 {
    font-family: 'Michroma', sans-serif;
    letter-spacing: 4px;
}

body {
    font-family: 'Monsterrat', 'roboto', sans-serif;
    color: #f8f8f7;
    text-shadow: 1px 1px #000000;
    background-color: #000000;
    font-size: 1.25em;
}

/* page layout */

nav {
    display: grid;
    grid-template-areas:
    'nleft logo nright';
}

.index-layout {
    display: grid;
    row-gap: 20px;
    grid-template-areas:
    'hero'
    'call-to-action'
    'contact'
    'footer';
}

.logo {
grid-area: logo;
}

.nleft {
    display: grid;
    grid-template-rows: 50% 50%;
    grid-area: nleft;
    width: 100%;
    text-align: center;
}

.nright {
    display: grid;
    grid-template-rows: 50% 50%;
    grid-area: nright;
    width: 100%;
    text-align: center;
}

.hero {
    grid-area: hero;
}

.call-to-action {
    grid-area: call-to-action;
}

.contact {
    grid-area: contact;
}

.footer {
    grid-area: footer;
}

/* header and logo  */

#logo-container {
    margin: 0 auto;
    padding-top: 15px; 
    color: #f8f8f7;
    width: 230px;
    height: 115px;
    text-align: center;
    text-transform: uppercase;
    position: relative;
    overflow: hidden;
}

#logo-ronin {
    font-family: 'Teko', sans-serif;
    font-size: 74px;
    position: relative;
    letter-spacing: 2px;
    z-index: 2;
}

#logo-347 {
    font-family: 'Mr Dafoe', cursive;
    position: absolute;
    right: 23px;
    top: 58px;
    font-size: 50px;
    color: #db0a0b;
    z-index: 3;
}

/* navigation */

nav {
    margin: 20px 0;
    width: 100%;
    height: 100px;
    background-color: #070505;
}

.nleft a {
    text-decoration: none;
    padding: 10px;
    color: #f8f8f7;
    text-shadow: none;
    text-transform: uppercase;
    font-family: 'Marcellus', serif;
    font-weight: 700;
    font-size: 2rem;
    letter-spacing: 8px;
    position: relative;
    z-index: 3;
    background-color: black;
}

.nright a {
    text-decoration: none;
    padding: 10px;
    color: #f8f8f7;
    text-shadow: none;
    text-transform: uppercase;
    font-family: 'Marcellus', serif;
    font-weight: 700;
    font-size: 2rem;
    letter-spacing: 8px;
    position: relative;
    z-index: 3;
    background-color: black;
}
#navigation-1 a {
    background-color: black;
    background: linear-gradient(to left, black 50%, #f8f8f7 50%) right;
    background-size: 200%;
    transition: .5s cubic-bezier(1,0,0.2,1);
}

#navigation-2 a {
    background-color: black;
    background: linear-gradient(to right, black 50%, #f8f8f7 50%) left;
    background-size: 200%;
    transition: .5s cubic-bezier(1,0,0.2,1);
}

#nav-hover-home {
    font-family: 'Comforter', cursive;
    font-weight: 500;
    font-size: 5rem;
    color: white;
    position: absolute;
    bottom: -25px;
    left: 5px;
}

.nleft a:hover {
    color: #db0a0b;
}

.nright a:hover {
    color: #db0a0b;
}

#navigation-1 a:hover {
    background-position: left;
}

#navigation-2 a:hover {
    background-position: right;
}

.ink-partition {
    width: 100%;
    height: 200px;
    background: url(../images/index/ink-partition-4.png) no-repeat center;
    background-size: cover;
    position: absolute;
}

/* hero section */

#ip-hero-top {
    bottom: 90%;
    z-index: 2;
}


#hero-container {
    width: 100%;
}

#hero-project {
    overflow: visible;
    /* 16:9 aspect ratio */
    padding-top: 56.25%;
    position: relative;
    z-index: -1;
  }
#hero-project video {
     border: 0;
     height: 100%;
     left: 0;
     position: absolute;
     top: 0;
     width: 100%;
     z-index: 0;
  }

  #ip-hero-bottom {
    position: absolute;
    top: 95%;
    z-index: 2;
  }

/* about section */

#about-container {
    margin-top: 5%;
    width: 100%;
    height: 500px;
    position: relative;
    z-index: 4;
    background-color: #000000;
}

#ink-partition-about-top {
    top: -100px;
    z-index: 3;
}

#ink-partition-about-bottom {
    top: 800px;
    z-index: 3;
}

#about-image-container {
    margin: 0 auto;
    height: 900px;
    width: 100%;
    overflow: hidden;
    position: relative;
}

#about-image {
    background: url(../images/index/about-bg-2.png) no-repeat center;
    width: 100%;
    height: 1000px;
    position: absolute;
    left: 0;
    top: 0;
    z-index: 1;
    /* animation */
    animation-name: about-slide;
    animation-duration: 30s;
    animation-fill-mode: forwards;
}

#about-image-shade {
    position: relative;
    width: 100%;
    height: 900px;
    background-color: rgba(0, 0, 0, 0.5);
    z-index: 3;
}

/* about image animation */
@keyframes about-slide {
    from {
        transform: scale(1.1);
    }

    to {
        transform: scale(1);
    }
}

#about-text-container {
    width: 50%;
}

#about-text {
    position: absolute;
    top: 100px;
    width: 90%;
    Margin: 0 auto;
    padding: 10px 5% 10px 5%;
    z-index: 4;
}

/* call to action secton */

#call-to-actions {
    width: 90%;
    padding-top: 20px;
    margin: 0 auto;
}

#call-to-actions > h2 {
    text-align: center;
    margin-bottom: 0.5em;
}

/* contact form */

#contact-container {
    overflow: hidden;
    width: 100%;
    height: 650px;
    margin: 0 auto;
    position: relative;
}

#ip-contact-top {
    bottom: 90%;
    z-index: 2;
}

#contact-bg {
    background: url(../images/index/contact-bg.png) no-repeat center;
    background-size: cover;
    width: 100%;
    height: 700px;
    border-top: 10px solid #000000;
    border-bottom: 15px solid #000000;

}

#form-box {
    position: relative;
    width: 100%;
    top: 20px;
    overflow: hidden;
    height: 700px;
    background-color: rgba(0, 0, 0, 0.6);
}
.contact-form {
    margin-top: 60px;
    color: #f8f8f7;
    position: absolute;
    width: 95vw;
    padding: 0 3%;
}

.contact-form > h2 {
    color: #f8f8f7;
    padding-bottom: 0.5em;
}

label {
    width: 100%;
}

.form-text {
    background: transparent;
    color: #f8f8f7;
    width: 100%;
    height: 25px;
    margin: 5px 0 20px 0;
    border: 1px solid #f8f8f7;
    border-radius: 2px;
}

.form-text:focus {
    outline: 2px solid #db0a0b !important;
    border: 1px solid rgba(0, 0, 0, 0) !important;
    padding-left: 0.2em;
}

.form-note {
    min-width: 250px;
    min-height: 150px;
}

.submit-contact {
    float: right;
    font-family: 'Michroma', sans-serif;
    color:#f8f8f7;
    background-color: rgba(0, 0, 0, 0);
    border: 1px solid #f8f8f7;
    padding: 5px;
    border-radius: 2px;
    position: relative;
    z-index: 3;
}

.submit-contact:hover {
    background-color: #f8f8f7;
    color: #070505;
}

#ip-contact-bottom {
    top: 90%;
    z-index: 2;
}

/* footer */

#social-footer {
    width: 100%;
    height: 200px;
    background-color: #000000;
    color:#f8f8f7;
    position: relative;
}

#ink-partition-footer {
    top: -100px;
    z-index: 3;
}

#social {
    margin: 0 auto;
    text-align: center;
    width: 90%;
}

#social h2 {
    text-align: center;
    font-size: 80%;
    position: relative;
    z-index: 4;
}
.social-buttons {
    text-align: center;
    display: grid;
    position: relative;
    bottom: 10px;
    z-index: 4;
    grid-template-columns: 33% 33% 33%;
}

.social-buttons li {
    margin: 15px 15%;
    list-style-type: none;
}

.social-buttons i {
    font-size: 300%;
    padding: 5%;
    margin: 1%;
}

#twitter {
    color: #f8f8f7;
}

#twitter i:hover {
    color: rgb(29, 155, 240);
}

#youtube {
    color: #f8f8f7;
}

#youtube i:hover {
    color: #c00;
}

#instagram {
    color: #f8f8f7;
}

#instagram i:hover {
    color: peachpuff;
}
#company-address {
    float: right;
    margin: 20px 40px;
    text-align: right;
    font-size: 1.25em;
}

#cal-rex-git {
    position: absolute;
    bottom: 0;
    left: 0;
    margin-left: 5px;
}

#copyright {
    position: absolute;
    bottom: 0;
    right: 0;
    margin-right: 5px;
}

/* Media queries */
@media screen and (max-width: 750px){
    nav {
        display: grid;
        grid-template-areas:
        'logo'
        'nleft'
        'nright';
        padding-bottom: 275px;
        background-color: #000000;
    }
}

